--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,10 @@
 </head>
 
 <body>
+  <div style="display: none;">
+    <include src="dist/img/sprite.svg"></include>
+  </div>
+
   <header class="header">
     <div class="container">
       <div class="header__wrapper row no-gutters justify-content-center align-items-center">
@@ -47,12 +51,12 @@
             <div class="header__socials col-5 col-sm-1 col-md-2">
               <a href="#" class="header__socials-link">
                 <svg class="header__icon" role="img" width="25" height="25">
-                  <use xlink:href="img/icons/insta.svg#insta"></use>
+                  <use xlink:href="#insta"></use>
                 </svg>
               </a>
               <a href="#" class="header__socials-link">
                 <svg class="header__icon" role="img" width="31" height="31">
-                  <use xlink:href="img/icons/vk.svg#vk"></use>
+                  <use xlink:href="#vk"></use>
                 </svg>
               </a>
             </div>
@@ -64,7 +68,7 @@
             <div class="header__vision col-2 col-sm-1 order-8 order-xl-12">
               <a href="#" class="header__vision-link">
                 <svg class="header__icon" role="img" width="30" height="16">
-                  <use xlink:href="img/icons/eye.svg#eye"></use>
+                  <use xlink:href="#eye"></use>
                 </svg>
               </a>
             </div>
@@ -224,7 +228,7 @@
           <div class="about__card about-card about-card--1 ">
             <a href="#" class="about-card__link"></a>
             <svg class="about-card__bg" role="img" width="230" height="81">
-              <use xlink:href="img/icons/ice-bg.svg#ice-bg"></use>
+              <use xlink:href="#ice-bg"></use>
             </svg>
             <div class="about-card__info-wrapper">
               <h3 class="about-card__title">Информация для родителей</h3>
@@ -236,7 +240,7 @@
           <div class="about__card about-card about-card--2 col-12">
             <a href="#" class="about-card__link"></a>
             <svg class="about-card__bg" role="img" width="230" height="81">
-              <use xlink:href="img/icons/ice-bg.svg#ice-bg"></use>
+              <use xlink:href="#ice-bg"></use>
             </svg>
             <div class="about-card__info-wrapper">
               <h3 class="about-card__title">Календарь соревнований</h3>
@@ -248,7 +252,7 @@
           <div class="about__card about-card about-card--3 col-12">
             <a href="#" class="about-card__link"></a>
             <svg class="about-card__bg" role="img" width="230" height="81">
-              <use xlink:href="img/icons/ice-bg.svg#ice-bg"></use>
+              <use xlink:href="#ice-bg"></use>
             </svg>
             <div class="about-card__info-wrapper">
               <h3 class="about-card__title">Лучшие спортсмены</h3>
@@ -260,7 +264,7 @@
           <div class="about__card about-card about-card--4 col-12">
             <a href="#" class="about-card__link"></a>
             <svg class="about-card__bg" role="img" width="230" height="81">
-              <use xlink:href="img/icons/ice-bg.svg#ice-bg"></use>
+              <use xlink:href="#ice-bg"></use>
             </svg>
             <div class="about-card__info-wrapper">
               <h3 class="about-card__title">Тренерский состав</h3>
@@ -490,12 +494,12 @@
             <div class="footer__links-wrapper">
               <a href="#" class="footer__icon-link">
                 <svg class="footer__icon" role="img" width="25" height="25">
-                  <use xlink:href="img/icons/insta.svg#insta"></use>
+                  <use xlink:href="#insta"></use>
                 </svg>
               </a>
               <a href="#" class="footer__icon-link">
                 <svg class="footer__icon" role="img" width="31" height="31">
-                  <use xlink:href="img/icons/vk.svg#vk"></use>
+                  <use xlink:href="#vk"></use>
                 </svg>
               </a>
             </div>
