--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><html lang="ru"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Хоккейная школа «Айсберг»"><link rel="preload" href="fonts/SourceSansPro-SemiBold.woff2" as="font" crossorigin="anonymous"><link rel="preload" href="fonts/SourceSansPro-Regular.woff2" as="font" crossorigin="anonymous"><link rel="preload" href="fonts/SourceSansPro-BlackItalic.woff2" as="font" crossorigin="anonymous"><link rel="preload" href="fonts/SourceSansPro-Italic.woff2" as="font" crossorigin="anonymous"><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"><link href="css/style.min.css" rel="stylesheet"><title>Айсберг</title></head><body><div style="display: none;"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><defs>
-<clipPath id="clip">
+<clipPath id="clip0">
 <rect width="25" height="25" fill="white"></rect>
 </clipPath>
 
